Fix field description visibility in 'Preview Form'

--- a/client/src/Components/local/molecules/json-editor/bioworks.css
+++ b/client/src/Components/local/molecules/json-editor/bioworks.css
@@ -13,7 +13,7 @@ form .field {
     display: inline-grid;
 }
 
-.form-group .mb-3 {
+.message-creator .form-group .mb-3 {
   color: white;
 }
 
